secondfile/objects/Topic__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Include_in_Nav__c</fullName>
        <label>Include in Nav?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Featured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Topic</label>
        <referenceTo>Topic__c</referenceTo>
        <relationshipLabel>Topics</relationshipLabel>
        <relationshipName>Topics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Topic_Image_Link__c</fullName>
        <label>Topic Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Topic_Image__c</fullName>
        <formula>IMAGE(Topic_Image_Link__c, &quot;Topic Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Status__c</fullName>
        <label>Topic Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Topic</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Include_in_Nav__c</columns>
        <columns>Topic_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <nameField>
        <label>Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Featured_Image_Validation</fullName>
        <active>true</active>
        <description>This validation rule is to make sure that there is an Topic image attached to a Topic record included in navigation as featured.</description>
        <errorConditionFormula>AND( ISPICKVAL( Include_in_Nav__c , &apos;Featured&apos;) , ISBLANK( Topic_Image_Link__c ) )</errorConditionFormula>
        <errorMessage>It is mandatory to have a Image for Topic marked as &apos;Featured&apos;.  Please upload a Topic Image.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_Topic_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( ISBLANK(  Parent_Topic__r.Parent_Topic__r.Parent_Topic__c  ) )</errorConditionFormula>
        <errorDisplayField>Parent_Topic__c</errorDisplayField>
        <errorMessage>Hierarchical topic relationships should not span more than 3 levels.</errorMessage>
    </validationRules>
</CustomObject>